# bengine

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vcpkg.json
shaders/: frag.shader  vertex.shader
src/: camera.cpp  camera.h  cube.h  game.cpp  game.h  main.cpp  object.cpp  object.h  plane.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
